@@ -1,6 +1,7 @@
 package com.bruno.livro.controller.common;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.validation.FieldError;
@@ -11,6 +12,9 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import com.bruno.livro.controller.dto.ErroCampo;
 import com.bruno.livro.controller.dto.ErroResposta;
+import com.bruno.livro.exceptions.CampoInvalidoException;
+import com.bruno.livro.exceptions.OperacaoNaoPermitidaException;
+import com.bruno.livro.exceptions.RegistroDuplicadoException;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
@@ -20,8 +24,39 @@ public class GlobalExceptionHandler {
 	public ErroResposta handleMethodArgumentNotValidException(MethodArgumentNotValidException e) {
 		List<FieldError> fieldErrors = e.getFieldErrors();
 		List<ErroCampo> listaErros = fieldErrors.stream()
-				.map(fe -> new ErroCampo(fe.getField(), fe.getDefaultMessage())).toList();
+				.map(fe -> new ErroCampo(fe.getField(), fe.getDefaultMessage())).collect(Collectors.toList());
+		return new ErroResposta(HttpStatus.UNPROCESSABLE_ENTITY.value(), "Erro de validação.", listaErros);
+	}
 
-		return new ErroResposta(HttpStatus.UNPROCESSABLE_ENTITY.value(), "Erro de validação", listaErros);
+	@ExceptionHandler(RegistroDuplicadoException.class)
+	@ResponseStatus(HttpStatus.CONFLICT)
+	public ErroResposta handleRegistroDuplicadoException(RegistroDuplicadoException e) {
+		return ErroResposta.conflito(e.getMessage());
+	}
+
+	@ExceptionHandler(OperacaoNaoPermitidaException.class)
+	@ResponseStatus(HttpStatus.BAD_REQUEST)
+	public ErroResposta handleOperacaoNaoPermitidaException(OperacaoNaoPermitidaException e) {
+		return ErroResposta.respostaPadrao(e.getMessage());
+	}
+
+	@ExceptionHandler(CampoInvalidoException.class)
+	@ResponseStatus(HttpStatus.UNPROCESSABLE_ENTITY)
+	public ErroResposta handleCampoInvalidoException(CampoInvalidoException e) {
+		return new ErroResposta(HttpStatus.UNPROCESSABLE_ENTITY.value(), "Erro de validação.",
+				List.of(new ErroCampo(e.getCampo(), e.getMessage())));
+	}
+
+//    @ExceptionHandler(AccessDeniedException.class)
+//    @ResponseStatus(HttpStatus.FORBIDDEN)
+//    public ErroResposta handleAccesDeniedException(AccessDeniedException e){
+//        return new ErroResposta(HttpStatus.FORBIDDEN.value(), "Acesso Negado.", List.of());
+//    }
+
+	@ExceptionHandler(RuntimeException.class)
+	@ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
+	public ErroResposta handleErrosNaoTratados(RuntimeException e) {
+		return new ErroResposta(HttpStatus.INTERNAL_SERVER_ERROR.value(),
+				"Ocorreu um erro inesperado. Entre em contato com a administração.", List.of());
 	}
 }
